[package]
name = "change_jar"
version = "0.1.0"
authors = ["Protowalker <jacksonedwards6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
tokio = { version = "1", features = ["full"] }
plaid = "1"
dotenv = "0.15"
